<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="carvajal.autenticador.android.activity.LoginActivity"
    android:background="@drawable/ic_fondo_login"
    android:id="@+id/pruebalogin" >

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="390dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/label_usuario"
        android:inputType="text"
        android:padding="5dip"
        android:text="supervisor"
        android:maxLength="10" />        
    
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsuario"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="440dp"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:text="supervisor"
        android:padding="5dip"
        android:maxLength="10" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:width="120dp"
        android:layout_marginTop="534dp"
        android:background="@drawable/rounded_button"
        android:padding="10dip"
        android:text="@string/label_ingresar"
        android:textColor="@android:color/white"
        android:onClick="ingresar" />

    

</RelativeLayout>