<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewDepto"
                style="@style/EtiquetaConfiguracionActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_depto" />

            <TextView
                android:id="@+id/textViewVarDeptoConf"
                style="@style/ContenidoConfiguracionActual"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dip"
                android:scrollHorizontally="true"
                android:text="Medium Text" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewMpio"
                style="@style/EtiquetaConfiguracionActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_mpio" />

            <TextView
                android:id="@+id/textViewVarMpioConf"
                style="@style/ContenidoConfiguracionActual"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dip"
                android:scrollHorizontally="true"
                android:text="Medium Text" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewPuesto"
                style="@style/EtiquetaConfiguracionActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_puesto" />

            <TextView
                android:id="@+id/textViewVarPuestoConf"
                style="@style/ContenidoConfiguracionActual"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewEstacion"
                style="@style/EtiquetaConfiguracionActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_estacion" />

            <TextView
                android:id="@+id/textViewVarEstacionConf"
                style="@style/ContenidoConfiguracionActual"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dip"
                android:scrollHorizontally="true"
                android:text="Medium Text" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textViewServidor"
                style="@style/EtiquetaConfiguracionActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_servidor" />

            <TextView
                android:id="@+id/textViewVarServidorConf"
                style="@style/ContenidoConfiguracionActual"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="2dip"
                android:scrollHorizontally="true"
                android:text="Medium Text" />
        </TableRow>
    </TableLayout>

</RelativeLayout>